sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:8: error: not found: value plusPetitue
      if (plusPetitue(l,valeur)){
          ^